test/semantic-errors/10.pas
program p;
begin if""then writeln("");
end.
